<resources>
    <string name="app_name">StocksPortfolioApp_Test</string>
    <string name="portfolio">Portfolio</string>
    <string name="net_qty">NET QTY:</string>
    <string name="str_ltp">LTP:</string>
    <string name="str_p_and_l">P&amp;L:</string>
    <string name="str_no_stocks">No Stocks</string>
    <string name="str_current_value">Current value*</string>
    <string name="str_total_investment">Total investment*</string>
    <string name="str_today_profit_loss">Today\'s Profit &amp; Loss*</string>
    <string name="str_profit_loss">Profit &amp; Loss*</string>
    <string name="str_watchlist">Watchlist</string>
    <string name="str_orders">Orders</string>
    <string name="str_funds">Funds</string>
    <string name="str_invest">Invest</string>
    <string name="rupee_symbol">₹</string>
</resources>