<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_pnl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bottom_sheet_pnl"
    android:padding="@dimen/_11sdp">

    <TextView
        android:id="@+id/tv_current_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_current_value"
        android:textColor="@color/clr_bottom_sheet_labels"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_current_value_amt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_current_value"
        tools:text="0" />

    <TextView
        android:id="@+id/tv_investment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:text="@string/str_total_investment"
        android:textColor="@color/clr_bottom_sheet_labels"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_value" />

    <TextView
        android:id="@+id/tv_investment_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_investment"
        tools:text="0" />

    <TextView
        android:id="@+id/tv_today_pnl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:text="@string/str_today_profit_loss"
        android:textColor="@color/clr_bottom_sheet_labels"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_investment" />

    <TextView
        android:id="@+id/tv_todays_pnl_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_today_pnl"
        tools:text="0" />

</androidx.constraintlayout.widget.ConstraintLayout>